--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 	font-weight: bold;
 	font-style: italic;
 	font-family: Comic Sans MS;
-	text-decoration: line-through;
+	text-decoration: underline;
 	border: 2px dashed brown;
 	border-radius: 25%;
 	animation: slideIn 2s 1 cubic-bezier(0.5, 0.5, 0.5, 2);
